url changed and login UI modified

--- a/src/app/layouts/login/login.component.html
+++ b/src/app/layouts/login/login.component.html
@@ -64,14 +64,14 @@
                 >Remember me</label
               >
             </div>
-            <a
+            <!-- <a
               href="#"
               class="text-decoration-none small"
               data-bs-toggle="modal"
               data-bs-target="#forgotModal"
             >
               Forgot Password?
-            </a>
+            </a> -->
           </div>
 
           <button
@@ -82,12 +82,12 @@
             Sign In
           </button>
 
-          <div class="text-center">
+          <!-- <div class="text-center">
             <span class="text-muted small">Don't have an account? </span>
             <a routerLink="/register" class="text-decoration-none"
               >Create Account</a
             >
-          </div>
+          </div> -->
         </form>
       </div>
     </div>
